parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> P
Rule 1     P -> B P
Rule 2     P -> F P
Rule 3     P -> empty
Rule 4     F -> FUNCTION H ID LPAREN A RPAREN LLLAVE W RLLAVE
Rule 5     H -> T
Rule 6     H -> empty
Rule 7     A -> T ID K
Rule 8     A -> empty
Rule 9     K -> COMA T ID K
Rule 10    K -> empty
Rule 11    W -> D W
Rule 12    W -> empty
Rule 13    D -> VAR T ID PYC
Rule 14    D -> DO LLLAVE W RLLAVE WHILE LPAREN E RPAREN PYC
Rule 15    D -> IF LPAREN E RPAREN LLLAVE W RLLAVE
Rule 16    D -> S
Rule 17    W -> RETURN X PYC
Rule 18    X -> empty
Rule 19    X -> E
Rule 20    B -> IF LPAREN E RPAREN LLLAVE C RLLAVE
Rule 21    S -> ID LPAREN L RPAREN PYC
Rule 22    L -> E Q
Rule 23    L -> empty
Rule 24    Q -> COMA E Q
Rule 25    Q -> empty
Rule 26    B -> DO LLLAVE C RLLAVE WHILE LPAREN E RPAREN PYC
Rule 27    C -> B C
Rule 28    C -> empty
Rule 29    B -> VAR T ID PYC
Rule 30    B -> S
Rule 31    S -> ID ASIG E PYC
Rule 32    T -> STRING
Rule 33    T -> BOOLEAN
Rule 34    T -> INT
Rule 35    S -> PRINT LPAREN E RPAREN PYC
Rule 36    S -> PROMPT LPAREN ID RPAREN PYC
Rule 37    S -> MMENOS ID PYC
Rule 38    E -> NEG R
Rule 39    E -> R
Rule 40    R -> U MENORQUE U
Rule 41    R -> U
Rule 42    U -> V SUM U
Rule 43    U -> V
Rule 44    V -> ENTERO
Rule 45    V -> ID
Rule 46    V -> CADENA
Rule 47    V -> LPAREN E RPAREN
Rule 48    V -> ID LPAREN L RPAREN
Rule 49    empty -> <empty>

Terminals, with rules where they appear

ASIG                 : 31
BOOLEAN              : 33
CADENA               : 46
COMA                 : 9 24
DO                   : 14 26
ENTERO               : 44
FUNCTION             : 4
ID                   : 4 7 9 13 21 29 31 36 37 45 48
IF                   : 15 20
INT                  : 34
LLLAVE               : 4 14 15 20 26
LPAREN               : 4 14 15 20 21 26 35 36 47 48
MENORQUE             : 40
MMENOS               : 37
NEG                  : 38
PRINT                : 35
PROMPT               : 36
PYC                  : 13 14 17 21 26 29 31 35 36 37
RETURN               : 17
RLLAVE               : 4 14 15 20 26
RPAREN               : 4 14 15 20 21 26 35 36 47 48
STRING               : 32
SUM                  : 42
VAR                  : 13 29
WHILE                : 14 26
error                : 

Nonterminals, with rules where they appear

A                    : 4
B                    : 1 27
C                    : 20 26 27
D                    : 11
E                    : 14 15 19 20 22 24 26 31 35 47
F                    : 2
H                    : 4
K                    : 7 9
L                    : 21 48
P                    : 1 2 0
Q                    : 22 24
R                    : 38 39
S                    : 16 30
T                    : 5 7 9 13 29
U                    : 40 40 41 42
V                    : 42 43
W                    : 4 11 14 15
X                    : 17
empty                : 3 6 8 10 12 18 23 25 28

Parsing method: LALR

state 0

    (0) S' -> . P
    (1) P -> . B P
    (2) P -> . F P
    (3) P -> . empty
    (20) B -> . IF LPAREN E RPAREN LLLAVE C RLLAVE
    (26) B -> . DO LLLAVE C RLLAVE WHILE LPAREN E RPAREN PYC
    (29) B -> . VAR T ID PYC
    (30) B -> . S
    (4) F -> . FUNCTION H ID LPAREN A RPAREN LLLAVE W RLLAVE
    (49) empty -> .
    (21) S -> . ID LPAREN L RPAREN PYC
    (31) S -> . ID ASIG E PYC
    (35) S -> . PRINT LPAREN E RPAREN PYC
    (36) S -> . PROMPT LPAREN ID RPAREN PYC
    (37) S -> . MMENOS ID PYC

    IF              shift and go to state 5
    DO              shift and go to state 6
    VAR             shift and go to state 7
    FUNCTION        shift and go to state 10
    $end            reduce using rule 49 (empty -> .)
    ID              shift and go to state 8
    PRINT           shift and go to state 11
    PROMPT          shift and go to state 12
    MMENOS          shift and go to state 13

    P                              shift and go to state 1
    B                              shift and go to state 2
    F                              shift and go to state 3
    empty                          shift and go to state 4
    S                              shift and go to state 9

state 1

    (0) S' -> P .



state 2

    (1) P -> B . P
    (1) P -> . B P
    (2) P -> . F P
    (3) P -> . empty
    (20) B -> . IF LPAREN E RPAREN LLLAVE C RLLAVE
    (26) B -> . DO LLLAVE C RLLAVE WHILE LPAREN E RPAREN PYC
    (29) B -> . VAR T ID PYC
    (30) B -> . S
    (4) F -> . FUNCTION H ID LPAREN A RPAREN LLLAVE W RLLAVE
    (49) empty -> .
    (21) S -> . ID LPAREN L RPAREN PYC
    (31) S -> . ID ASIG E PYC
    (35) S -> . PRINT LPAREN E RPAREN PYC
    (36) S -> . PROMPT LPAREN ID RPAREN PYC
    (37) S -> . MMENOS ID PYC

    IF              shift and go to state 5
    DO              shift and go to state 6
    VAR             shift and go to state 7
    FUNCTION        shift and go to state 10
    $end            reduce using rule 49 (empty -> .)
    ID              shift and go to state 8
    PRINT           shift and go to state 11
    PROMPT          shift and go to state 12
    MMENOS          shift and go to state 13

    B                              shift and go to state 2
    P                              shift and go to state 14
    F                              shift and go to state 3
    empty                          shift and go to state 4
    S                              shift and go to state 9

state 3

    (2) P -> F . P
    (1) P -> . B P
    (2) P -> . F P
    (3) P -> . empty
    (20) B -> . IF LPAREN E RPAREN LLLAVE C RLLAVE
    (26) B -> . DO LLLAVE C RLLAVE WHILE LPAREN E RPAREN PYC
    (29) B -> . VAR T ID PYC
    (30) B -> . S
    (4) F -> . FUNCTION H ID LPAREN A RPAREN LLLAVE W RLLAVE
    (49) empty -> .
    (21) S -> . ID LPAREN L RPAREN PYC
    (31) S -> . ID ASIG E PYC
    (35) S -> . PRINT LPAREN E RPAREN PYC
    (36) S -> . PROMPT LPAREN ID RPAREN PYC
    (37) S -> . MMENOS ID PYC

    IF              shift and go to state 5
    DO              shift and go to state 6
    VAR             shift and go to state 7
    FUNCTION        shift and go to state 10
    $end            reduce using rule 49 (empty -> .)
    ID              shift and go to state 8
    PRINT           shift and go to state 11
    PROMPT          shift and go to state 12
    MMENOS          shift and go to state 13

    F                              shift and go to state 3
    P                              shift and go to state 15
    B                              shift and go to state 2
    empty                          shift and go to state 4
    S                              shift and go to state 9

state 4

    (3) P -> empty .

    $end            reduce using rule 3 (P -> empty .)


state 5

    (20) B -> IF . LPAREN E RPAREN LLLAVE C RLLAVE

    LPAREN          shift and go to state 16


state 6

    (26) B -> DO . LLLAVE C RLLAVE WHILE LPAREN E RPAREN PYC

    LLLAVE          shift and go to state 17


state 7

    (29) B -> VAR . T ID PYC
    (32) T -> . STRING
    (33) T -> . BOOLEAN
    (34) T -> . INT

    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20
    INT             shift and go to state 21

    T                              shift and go to state 18

state 8

    (21) S -> ID . LPAREN L RPAREN PYC
    (31) S -> ID . ASIG E PYC

    LPAREN          shift and go to state 22
    ASIG            shift and go to state 23


state 9

    (30) B -> S .

    IF              reduce using rule 30 (B -> S .)
    DO              reduce using rule 30 (B -> S .)
    VAR             reduce using rule 30 (B -> S .)
    FUNCTION        reduce using rule 30 (B -> S .)
    ID              reduce using rule 30 (B -> S .)
    PRINT           reduce using rule 30 (B -> S .)
    PROMPT          reduce using rule 30 (B -> S .)
    MMENOS          reduce using rule 30 (B -> S .)
    $end            reduce using rule 30 (B -> S .)
    RLLAVE          reduce using rule 30 (B -> S .)


state 10

    (4) F -> FUNCTION . H ID LPAREN A RPAREN LLLAVE W RLLAVE
    (5) H -> . T
    (6) H -> . empty
    (32) T -> . STRING
    (33) T -> . BOOLEAN
    (34) T -> . INT
    (49) empty -> .

    STRING          shift and go to state 19
    BOOLEAN         shift and go to state 20
    INT             shift and go to state 21
    ID              reduce using rule 49 (empty -> .)

    H                              shift and go to state 24
    T                              shift and go to state 25
    empty                          shift and go to state 26

state 11

    (35) S -> PRINT . LPAREN E RPAREN PYC

    LPAREN          shift and go to state 27


state 12

    (36) S -> PROMPT . LPAREN ID RPAREN PYC

    LPAREN          shift and go to state 28


state 13

    (37) S -> MMENOS . ID PYC

    ID              shift and go to state 29


state 14

    (1) P -> B P .

    $end            reduce using rule 1 (P -> B P .)


state 15

    (2) P -> F P .

    $end            reduce using rule 2 (P -> F P .)


state 16

    (20) B -> IF LPAREN . E RPAREN LLLAVE C RLLAVE
    (38) E -> . NEG R
    (39) E -> . R
    (40) R -> . U MENORQUE U
    (41) R -> . U
    (42) U -> . V SUM U
    (43) U -> . V
    (44) V -> . ENTERO
    (45) V -> . ID
    (46) V -> . CADENA
    (47) V -> . LPAREN E RPAREN
    (48) V -> . ID LPAREN L RPAREN

    NEG             shift and go to state 32
    ENTERO          shift and go to state 36
    ID              shift and go to state 37
    CADENA          shift and go to state 38
    LPAREN          shift and go to state 30

    E                              shift and go to state 31
    R                              shift and go to state 33
    U                              shift and go to state 34
    V                              shift and go to state 35

state 17

    (26) B -> DO LLLAVE . C RLLAVE WHILE LPAREN E RPAREN PYC
    (27) C -> . B C
    (28) C -> . empty
    (20) B -> . IF LPAREN E RPAREN LLLAVE C RLLAVE
    (26) B -> . DO LLLAVE C RLLAVE WHILE LPAREN E RPAREN PYC
    (29) B -> . VAR T ID PYC
    (30) B -> . S
    (49) empty -> .
    (21) S -> . ID LPAREN L RPAREN PYC
    (31) S -> . ID ASIG E PYC
    (35) S -> . PRINT LPAREN E RPAREN PYC
    (36) S -> . PROMPT LPAREN ID RPAREN PYC
    (37) S -> . MMENOS ID PYC

    IF              shift and go to state 5
    DO              shift and go to state 6
    VAR             shift and go to state 7
    RLLAVE          reduce using rule 49 (empty -> .)
    ID              shift and go to state 8
    PRINT           shift and go to state 11
    PROMPT          shift and go to state 12
    MMENOS          shift and go to state 13

    C                              shift and go to state 39
    B                              shift and go to state 40
    empty                          shift and go to state 41
    S                              shift and go to state 9

state 18

    (29) B -> VAR T . ID PYC

    ID              shift and go to state 42


state 19

    (32) T -> STRING .

    ID              reduce using rule 32 (T -> STRING .)


state 20

    (33) T -> BOOLEAN .

    ID              reduce using rule 33 (T -> BOOLEAN .)


state 21

    (34) T -> INT .

    ID              reduce using rule 34 (T -> INT .)


state 22

    (21) S -> ID LPAREN . L RPAREN PYC
    (22) L -> . E Q
    (23) L -> . empty
    (38) E -> . NEG R
    (39) E -> . R
    (49) empty -> .
    (40) R -> . U MENORQUE U
    (41) R -> . U
    (42) U -> . V SUM U
    (43) U -> . V
    (44) V -> . ENTERO
    (45) V -> . ID
    (46) V -> . CADENA
    (47) V -> . LPAREN E RPAREN
    (48) V -> . ID LPAREN L RPAREN

    NEG             shift and go to state 32
    RPAREN          reduce using rule 49 (empty -> .)
    ENTERO          shift and go to state 36
    ID              shift and go to state 37
    CADENA          shift and go to state 38
    LPAREN          shift and go to state 30

    L                              shift and go to state 43
    E                              shift and go to state 44
    empty                          shift and go to state 45
    R                              shift and go to state 33
    U                              shift and go to state 34
    V                              shift and go to state 35

state 23

    (31) S -> ID ASIG . E PYC
    (38) E -> . NEG R
    (39) E -> . R
    (40) R -> . U MENORQUE U
    (41) R -> . U
    (42) U -> . V SUM U
    (43) U -> . V
    (44) V -> . ENTERO
    (45) V -> . ID
    (46) V -> . CADENA
    (47) V -> . LPAREN E RPAREN
    (48) V -> . ID LPAREN L RPAREN

    NEG             shift and go to state 32
    ENTERO          shift and go to state 36
    ID              shift and go to state 37
    CADENA          shift and go to state 38
    LPAREN          shift and go to state 30

    E                              shift and go to state 46
    R                              shift and go to state 33
    U                              shift and go to state 34
    V                              shift and go to state 35

state 24

    (4) F -> FUNCTION H . ID LPAREN A RPAREN LLLAVE W RLLAVE

    ID              shift and go to state 47


state 25

    (5) H -> T .

    ID              reduce using rule 5 (H -> T .)


state 26

    (6) H -> empty .

    ID              reduce using rule 6 (H -> empty .)


state 27

    (35) S -> PRINT LPAREN . E RPAREN PYC
    (38) E -> . NEG R
    (39) E -> . R
    (40) R -> . U MENORQUE U
    (41) R -> . U
    (42) U -> . V SUM U
    (43) U -> . V
    (44) V -> . ENTERO
    (45) V -> . ID
    (46) V -> . CADENA
    (47) V -> . LPAREN E RPAREN
    (48) V -> . ID LPAREN L RPAREN

    NEG             shift and go to state 32
    ENTERO          shift and go to state 36
    ID              shift and go to state 37
    CADENA          shift and go to state 38
    LPAREN          shift and go to state 30

    E                              shift and go to state 48
    R                              shift and go to state 33
    U                              shift and go to state 34
    V                              shift and go to state 35

state 28

    (36) S -> PROMPT LPAREN . ID RPAREN PYC

    ID              shift and go to state 49


state 29

    (37) S -> MMENOS ID . PYC

    PYC             shift and go to state 50


state 30

    (47) V -> LPAREN . E RPAREN
    (38) E -> . NEG R
    (39) E -> . R
    (40) R -> . U MENORQUE U
    (41) R -> . U
    (42) U -> . V SUM U
    (43) U -> . V
    (44) V -> . ENTERO
    (45) V -> . ID
    (46) V -> . CADENA
    (47) V -> . LPAREN E RPAREN
    (48) V -> . ID LPAREN L RPAREN

    NEG             shift and go to state 32
    ENTERO          shift and go to state 36
    ID              shift and go to state 37
    CADENA          shift and go to state 38
    LPAREN          shift and go to state 30

    E                              shift and go to state 51
    R                              shift and go to state 33
    U                              shift and go to state 34
    V                              shift and go to state 35

state 31

    (20) B -> IF LPAREN E . RPAREN LLLAVE C RLLAVE

    RPAREN          shift and go to state 52


state 32

    (38) E -> NEG . R
    (40) R -> . U MENORQUE U
    (41) R -> . U
    (42) U -> . V SUM U
    (43) U -> . V
    (44) V -> . ENTERO
    (45) V -> . ID
    (46) V -> . CADENA
    (47) V -> . LPAREN E RPAREN
    (48) V -> . ID LPAREN L RPAREN

    ENTERO          shift and go to state 36
    ID              shift and go to state 37
    CADENA          shift and go to state 38
    LPAREN          shift and go to state 30

    R                              shift and go to state 53
    U                              shift and go to state 34
    V                              shift and go to state 35

state 33

    (39) E -> R .

    RPAREN          reduce using rule 39 (E -> R .)
    COMA            reduce using rule 39 (E -> R .)
    PYC             reduce using rule 39 (E -> R .)


state 34

    (40) R -> U . MENORQUE U
    (41) R -> U .

    MENORQUE        shift and go to state 54
    RPAREN          reduce using rule 41 (R -> U .)
    COMA            reduce using rule 41 (R -> U .)
    PYC             reduce using rule 41 (R -> U .)


state 35

    (42) U -> V . SUM U
    (43) U -> V .

    SUM             shift and go to state 55
    MENORQUE        reduce using rule 43 (U -> V .)
    RPAREN          reduce using rule 43 (U -> V .)
    COMA            reduce using rule 43 (U -> V .)
    PYC             reduce using rule 43 (U -> V .)


state 36

    (44) V -> ENTERO .

    SUM             reduce using rule 44 (V -> ENTERO .)
    MENORQUE        reduce using rule 44 (V -> ENTERO .)
    RPAREN          reduce using rule 44 (V -> ENTERO .)
    COMA            reduce using rule 44 (V -> ENTERO .)
    PYC             reduce using rule 44 (V -> ENTERO .)


state 37

    (45) V -> ID .
    (48) V -> ID . LPAREN L RPAREN

    SUM             reduce using rule 45 (V -> ID .)
    MENORQUE        reduce using rule 45 (V -> ID .)
    RPAREN          reduce using rule 45 (V -> ID .)
    COMA            reduce using rule 45 (V -> ID .)
    PYC             reduce using rule 45 (V -> ID .)
    LPAREN          shift and go to state 56


state 38

    (46) V -> CADENA .

    SUM             reduce using rule 46 (V -> CADENA .)
    MENORQUE        reduce using rule 46 (V -> CADENA .)
    RPAREN          reduce using rule 46 (V -> CADENA .)
    COMA            reduce using rule 46 (V -> CADENA .)
    PYC             reduce using rule 46 (V -> CADENA .)


state 39

    (26) B -> DO LLLAVE C . RLLAVE WHILE LPAREN E RPAREN PYC

    RLLAVE          shift and go to state 57


state 40
